--- a/recipe-application/backend/package.json
+++ b/recipe-application/backend/package.json
@@ -15,7 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.6.3",
-    "nodemon": "^3.0.1"
+    "express-session": "^1.17.3",
+    "mongoose": "^7.0.0",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
